{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 1272,
  "lineage": "8a01ac22-c9e7-8680-5541-47bfcaed84cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:058264111519:instance/i-06bec4218e02ea03b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06bec4218e02ea03b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fjdak",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07367bdcfb6d473f9",
            "private_dns": "ip-10-0-1-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.244",
            "public_dns": "ec2-54-147-161-179.compute-1.amazonaws.com",
            "public_ip": "54.147.161.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fb768488f7c2f367",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9f84e6665dceb3d",
            "tags": {
              "Name": "Bashtion-host"
            },
            "tags_all": {
              "Name": "Bashtion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa6f7b812a2e6ef7"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.pub",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:058264111519:instance/i-0649fab40c68f9b37",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0649fab40c68f9b37",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fjdak",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-017475e73af7050c3",
            "private_dns": "ip-10-0-2-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05e9a4272d9f7091a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef2b5b351625b7a6",
            "tags": {
              "Name": "privatesubnet_1a"
            },
            "tags_all": {
              "Name": "privatesubnet_1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa6f7b812a2e6ef7"
            ]
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.allow_tls",
            "aws_subnet.private",
            "aws_subnet.pub",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:058264111519:instance/i-03a70d4365994b179",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a70d4365994b179",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fjdak",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-000650df3c604d726",
            "private_dns": "ip-10-0-4-188.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-036d5925962f00f96",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e53e78667b481576",
            "tags": {
              "Name": "privatesubnet_1b"
            },
            "tags_all": {
              "Name": "privatesubnet_1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa6f7b812a2e6ef7"
            ]
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.allow_tls",
            "aws_subnet.private1b",
            "aws_subnet.pub",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264111519:internet-gateway/igw-0d4765e6d884fd9e8",
            "id": "igw-0d4765e6d884fd9e8",
            "owner_id": "058264111519",
            "tags": {
              "Name": "internet gateway"
            },
            "tags_all": {
              "Name": "internet gateway"
            },
            "vpc_id": "vpc-0720189b6e24bb6f4"
          },
          "dependencies": [
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264111519:loadbalancer/app/alb-webapp/6bad55c20240cd57",
            "arn_suffix": "app/alb-webapp/6bad55c20240cd57",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-webapp-1233837783.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264111519:loadbalancer/app/alb-webapp/6bad55c20240cd57",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-webapp",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fa6f7b812a2e6ef7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d06cf7a865d8f64e"
              },
              {
                "subnet_id": "subnet-0e9f84e6665dceb3d"
              }
            ],
            "subnets": [
              "subnet-0d06cf7a865d8f64e",
              "subnet-0e9f84e6665dceb3d"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0720189b6e24bb6f4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.pub",
            "aws_subnet.public",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264111519:listener/app/alb-webapp/6bad55c20240cd57/e0d70d53e7ceeaf7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264111519:targetgroup/tg-loadbalance/c77297e5b998f257",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264111519:listener/app/alb-webapp/6bad55c20240cd57/e0d70d53e7ceeaf7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:058264111519:loadbalancer/app/alb-webapp/6bad55c20240cd57",
            "mutual_authentication": [],
            "port": 8000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.target",
            "aws_security_group.allow_tls",
            "aws_subnet.pub",
            "aws_subnet.public",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264111519:targetgroup/tg-loadbalance/c77297e5b998f257",
            "arn_suffix": "targetgroup/tg-loadbalance/c77297e5b998f257",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264111519:targetgroup/tg-loadbalance/c77297e5b998f257",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-loadbalance",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0720189b6e24bb6f4"
          },
          "dependencies": [
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgattach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web_private",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264111519:targetgroup/tg-loadbalance/c77297e5b998f257-20240616185752547300000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264111519:targetgroup/tg-loadbalance/c77297e5b998f257",
            "target_id": "i-0649fab40c68f9b37"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_instance.web_private",
            "aws_instance.web_private1",
            "aws_lb_target_group.target",
            "aws_security_group.allow_tls",
            "aws_subnet.private",
            "aws_subnet.private1b",
            "aws_subnet.pub",
            "aws_vpc.loadbalance"
          ]
        },
        {
          "index_key": "web_private1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264111519:targetgroup/tg-loadbalance/c77297e5b998f257-20240616185753057000000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264111519:targetgroup/tg-loadbalance/c77297e5b998f257",
            "target_id": "i-03a70d4365994b179"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_instance.web_private",
            "aws_instance.web_private1",
            "aws_lb_target_group.target",
            "aws_security_group.allow_tls",
            "aws_subnet.private",
            "aws_subnet.private1b",
            "aws_subnet.pub",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0300ef25e1991876c",
            "association_id": "eipassoc-0931899852fe6333c",
            "connectivity_type": "public",
            "id": "nat-09fa342b2a8922f08",
            "network_interface_id": "eni-04479f0604c4ae951",
            "private_ip": "10.0.1.148",
            "public_ip": "50.19.0.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e9f84e6665dceb3d",
            "tags": {
              "Name": "gateway for private"
            },
            "tags_all": {
              "Name": "gateway for private"
            }
          },
          "dependencies": [
            "aws_subnet.pub",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264111519:route-table/rtb-0ecbe5d6ed54489e9",
            "id": "rtb-0ecbe5d6ed54489e9",
            "owner_id": "058264111519",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09fa342b2a8922f08",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route for private"
            },
            "tags_all": {
              "Name": "route for private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0720189b6e24bb6f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.outbound",
            "aws_subnet.pub",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264111519:route-table/rtb-08b312b30e916cc79",
            "id": "rtb-08b312b30e916cc79",
            "owner_id": "058264111519",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4765e6d884fd9e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route for public"
            },
            "tags_all": {
              "Name": "route for public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0720189b6e24bb6f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045262abe3a97ab0e",
            "route_table_id": "rtb-08b312b30e916cc79",
            "subnet_id": "subnet-0e9f84e6665dceb3d"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.pub",
            "aws_subnet.pub",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f403146d97706f3a",
            "route_table_id": "rtb-08b312b30e916cc79",
            "subnet_id": "subnet-0d06cf7a865d8f64e"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.pub",
            "aws_subnet.public",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ec80ad8303748fa",
            "route_table_id": "rtb-0ecbe5d6ed54489e9",
            "subnet_id": "subnet-0ef2b5b351625b7a6"
          },
          "dependencies": [
            "aws_nat_gateway.outbound",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.pub",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0364211be70814ccc",
            "route_table_id": "rtb-0ecbe5d6ed54489e9",
            "subnet_id": "subnet-0e53e78667b481576"
          },
          "dependencies": [
            "aws_nat_gateway.outbound",
            "aws_route_table.private",
            "aws_subnet.private1b",
            "aws_subnet.pub",
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264111519:security-group/sg-0fa6f7b812a2e6ef7",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa6f7b812a2e6ef7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-load-traffic",
            "name_prefix": "",
            "owner_id": "058264111519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0720189b6e24bb6f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264111519:subnet/subnet-0ef2b5b351625b7a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef2b5b351625b7a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264111519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mayank-private-1a"
            },
            "tags_all": {
              "Name": "mayank-private-1a"
            },
            "vpc_id": "vpc-0720189b6e24bb6f4"
          },
          "dependencies": [
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264111519:subnet/subnet-0e53e78667b481576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e53e78667b481576",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264111519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mayank-private-1b"
            },
            "tags_all": {
              "Name": "mayank-private-1b"
            },
            "vpc_id": "vpc-0720189b6e24bb6f4"
          },
          "dependencies": [
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264111519:subnet/subnet-0e9f84e6665dceb3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9f84e6665dceb3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264111519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mayank-public-sub-a"
            },
            "tags_all": {
              "Name": "mayank-public-sub-a"
            },
            "vpc_id": "vpc-0720189b6e24bb6f4"
          },
          "dependencies": [
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264111519:subnet/subnet-0d06cf7a865d8f64e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d06cf7a865d8f64e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264111519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mayank-public-sub-b"
            },
            "tags_all": {
              "Name": "mayank-public-sub-b"
            },
            "vpc_id": "vpc-0720189b6e24bb6f4"
          },
          "dependencies": [
            "aws_vpc.loadbalance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "loadbalance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264111519:vpc/vpc-0720189b6e24bb6f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03135553e12594938",
            "default_route_table_id": "rtb-05d282da0287087ac",
            "default_security_group_id": "sg-0df1522be2e65b9fd",
            "dhcp_options_id": "dopt-0911c0a1a959c298b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0720189b6e24bb6f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d282da0287087ac",
            "owner_id": "058264111519",
            "tags": {
              "Name": "vpc for load balancer"
            },
            "tags_all": {
              "Name": "vpc for load balancer"
            }
          }
        }
      ]
    }
  ]
}